Implement GUI for process